playground-1/vpc.tf
resource "aws_vpc" "iti-vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "iti-iac-vpc"
    project = "iti-terraform"
  }
}
